2006-12-19  Albert Chu  <chu11@llnl.gov>

	* NEWS updated.

	* tagged cerebro-1-1-1

2006-12-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.c (_listener_setup_socket),
	src/cerebrod/cerebrod_speaker.c (_speaker_socket_create): Fix
	SO_REUSEADDR corner case.
	
2006-11-16  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/vector.c (vector_set): Fix counting bug.
	
2006-11-14  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Up library version.

	* Globally cleanup code so cerebrod "heartbeat" is now a cerebrod
	"message".  Heartbeats still exist, although they are now one type
	of cerebrod message, rather than the only possible message.
	
2006-11-14  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/cerebro/cerebro_metric_module.h,
	src/libs/modules/, src/modules/metric/: Support new
	metric module flags.

	* src/cerebrod/cerebrod_speaker_data.c,
	src/libs/include/cerebro/cerebro_metric_module.h: Alter method by
	which metric module threads are used.  Metric module threads now
	send heartbeats when data changes, they don't signal cerebro that
	data is simply updated.

	* src/modules/metric/cerebro_metric_slurm_state.c
	(_send_heartbeat,
	slurm_state_metric_send_heartbeat_function_pointer): New function.

	* src/modules/metric/cerebro_metric_slurm_state.c
	(slurm_state_metric_thread): Send heartbeat on state change.

	* src/cerebrod/cerebrod_speaker_data.c,
	src/cerebrod/cerebrod_speaker.h, src/cerebrod/cerebrod_speaker.c:
	Support metric module flags and possibility metric modules may not
	send data via heartbeats.

	* man/cerebro_module_devel.3.in: Updated appropriately.

2006-11-13  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_event_server.c: Fix up some comments.
	
2006-11-11  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_common.h,
	src/modules/metric/cerebro_metric_common.c: New files.

	* src/modules/metric/: Adjust to use new common functions.
	
2006-11-10  Albert Chu  <chu11@llnl.gov>
